--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     -->
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
-    <title>React App</title>
+    <title>KLIVE PAYMENT</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
