--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="KlivePay is the premier payment gateway allowing global users make payments seamlessly. Regardless of your channel or type of industry, Klivepay is fast, easy to use and most importantly secure. "
     />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
@@ -22,7 +22,7 @@
 
 
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css%22 rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"> -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -40,7 +40,7 @@
     -->
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
-    <title>KLIVE PAYMENT</title>
+    <title>KlivePay Payment Gateway</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
