--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,7 @@
       content="KlivePay is the premier payment gateway allowing global users make payments seamlessly. Regardless of your channel or type of industry, Klivepay is fast, easy to use and most importantly secure. "
     />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-
-  <!--====== Line Icons css ======-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">  <!--====== Line Icons css ======-->
   <link rel="stylesheet" href="assets/css/lineicons.css" />
 
   <!--====== Tiny Slider css ======-->
